--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  /* color: var(--foreground); */
-  color: rgb(75, 85, 99);
+  background: white;
+  color: black;
   min-height: 100vh;
 }
 
-/* Add the styles at the end of the file */
+.page-transition-wrapper {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 .contribution-content h2 {
   font-size: 1.5rem;
